# xcindex

./: .gitignore  README.md  pyproject.toml
.claude/skills/xcindex/: SKILL.md
scripts/: usr_interning_poc.md  usr_interning_poc.py
src/xcindex/: __init__.py  cache.py  claude_hooks.py  claude_skill.py  cli.py  discovery.py  doctor.py  dumper.py  engine.py  git_diff.py  helper.py  impact.py  incremental.py  output.py  query.py  schema.py  watch.py
src/xcindex/commands/: _common.py  at.py  cache.py  containing.py  doctor.py  file.py  git.py  impact.py  neighbors.py  occurrences.py  prewarm.py  reach.py  relations.py  search.py  setup.py  skill.py  symbol.py  watch.py
swift-helper/: Package.swift
swift-helper/Sources/xcindex-helper/: Bootstrap.swift  Incremental.swift  Mappings.swift  SQLiteWriter.swift  Schema.swift  main.swift
tests/: conftest.py
tests/fixtures/SampleApp/: Package.swift
tests/fixtures/SampleApp/Sources/Core/: Container.swift  Currency.swift  Money+Extensions.swift  Money.swift  Operators.swift  PriceCalculator.swift
tests/fixtures/SampleApp/Sources/Domain/: OrderProcessor.swift  (+2 more)
tests/integration/: test_blast_radius.py  test_dump_files.py  test_git_e2e.py  test_helper_bootstrap.py  test_helper_build.py  test_helper_incremental.py  test_impact_e2e.py  test_incremental_pipeline.py  test_pipeline.py  test_prewarm_e2e.py  test_primitive_coverage.py  test_watch_e2e.py
tests/unit/: test_cache.py  test_cache_gc.py  test_claude_hooks.py  test_cli_smoke.py  test_discovery.py  test_doctor.py  test_engine.py  test_git_diff.py  test_git_renderer.py  test_helper.py  test_impact.py  test_impact_renderer.py  test_incremental.py  test_migration.py  test_prewarm.py  test_projector.py  test_query.py  test_renderers.py  test_schema_v4.py  test_watch.py
(+1 files in other folders)
