[project]
name = "xcindex"
version = "0.1.0"
description = "Blast-radius CLI for Xcode projects: query the IndexStore for symbols, references, and reachability."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rafael Quixabeira" }]
keywords = ["xcode", "indexstore", "swift", "static-analysis", "agent", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
xcindex = "xcindex.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xcindex"]

# Bundle only the SwiftPM sources, never `.build/` / `.swiftpm/` artifacts —
# those carry absolute build paths that break PCH caches on the install host.
[tool.hatch.build.targets.wheel.force-include]
"swift-helper/Package.swift" = "xcindex/_swift_helper_src/Package.swift"
"swift-helper/Sources" = "xcindex/_swift_helper_src/Sources"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: integration tests requiring Xcode toolchain and a buildable fixture project",
]
